# hoopla

./: .gitignore  README.md  pyproject.toml
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test_gemini.py
cli/augmented_generation/: augmented_generation.py  general.py  opts.py
cli/describe_image/: general.py  opts.py
cli/evaluation/: general.py  opts.py
cli/hybrid_search/: general.py  hybrid_search.py  opts.py  utils_enhance.py  utils_logging.py  utils_rerank.py
cli/keyword_search/: general.py  inverted_index.py  keyword_search.py  opts.py
cli/keyword_search/text_processing/: text_processing.py
cli/multimodal_search/: general.py  multimodal_search.py  opts.py
cli/semantic_search/: general.py  opts.py  semantic_search.py
cli/text_processing/: text_processing.py
